fix: fix release errors